src/app/lsit-users/list-users.component.css
table {
  width: 100%;
  border-spacing: 0;
}

td {
  padding: 10px;
}

tr {
  border: 1px solid red;
}

tr:hover {
  background-color: #F2F0F9;
}

thead {
  background: #F4F2FF;
  font-family: "interFont", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 15px;

  letter-spacing: 0.05em;
  text-transform: uppercase;

  color: #6E6893;
}

th {
  height: 35px;
  text-align: left;
  padding: 10px;
}


p {
  font-family: "interFont", sans-serif;
  font-size: 12px;
  font-weight: 500;
  margin-top: 5px;
  margin-bottom: 5px;
}

.full-name-container {
  font-weight: bold;
  font-size: 14px;
  line-height: 17px;
  color: #25213B;
}

.email-container {
  font-size: 14px;
  line-height: 17px;
  letter-spacing: 0.05em;
  color: #6E6893;
}

.Active-user-status {
  height: 19px;
  width: 57px;
  line-height: 19px;
  background-color: #E6E6F2;
  color: #4A4AFF;
  border-radius: 10px;
}

.Inactive-user-status {
  height: 19px;
  width: 65px;
  line-height: 19px;
  background-color: #F2F0F9;
  color: #6E6893;
  border-radius: 10px;
}

.point-to-user-status {
  font-size: 8px;
  margin-left: 5px;
}

.last-login {
  color: #6E6893;
}

.Paid-payment-status {
  height: 19px;
  width: 50px;
  line-height: 19px;
  background-color: #CDFFCD;
  color: #007F00;
  border-radius: 10px;
}

.Overdue-payment-status {
  height: 19px;
  width: 70px;
  line-height: 19px;
  background-color: #FFE0E0;
  color: #D30000;
  border-radius: 10px;
}

.Unpaid-payment-status {
  height: 19px;
  width: 64px;
  line-height: 19px;
  background-color: #FFECCC;
  color: #965E00;
  border-radius: 10px;
}

.date-paid {
  color: #25213B;
}


.amount-head {
  text-align: right;
  margin-right: 50px;
}

.amount-count {
  font-weight: 600;
  font-size: 14px;
  line-height: 17px;
  text-align: right;
  text-transform: uppercase;

  color: #25213B;
}

.amount-text-currency {
  font-size: 12px;
  line-height: 15px;
  text-align: right;
  letter-spacing: 0.05em;

  color: #6E6893;
}

.view-more-container {
  width: 100%;
  height: 50px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.view-more-text {
  font-size: 12px;
  line-height: 15px;

  color: #6E6893;
}

.view-more-btn {
  border-radius: 20px;
  font-size: 30px;
  color: #8B83BA;
}

.view-more-btn:hover {
  cursor: pointer;
  color: #6D5BD0;
}


.visability-cont {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

